--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -288,6 +288,13 @@
                 tools:ignore="MissingConstraints" />
         </android.support.v7.widget.CardView>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/card_view4"
+            android:text="Refresh"
+            android:id="@+id/Refresh_Button"/>
+
     </RelativeLayout>
 
 </LinearLayout>
